--- a/app/src/main/res/layout/home_item_view.xml
+++ b/app/src/main/res/layout/home_item_view.xml
@@ -199,7 +199,7 @@
                 android:gravity="center"
                 android:layout_marginStart="@dimen/_16sdp"
                 android:text="@string/purchased_ticket"
-                android:textSize="@dimen/txt_md"
+                android:textSize="@dimen/txt_sm"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/gL_vertical_start"
                 app:layout_constraintStart_toStartOf="parent"
