--- a/app/src/main/res/layout/rv_noti_list.xml
+++ b/app/src/main/res/layout/rv_noti_list.xml
@@ -126,7 +126,7 @@
                 style="@style/TextSemiBold"
 
                 android:text="Open on : 12/1012021"
-                android:textColor="@color/noti_date_font_color"
+                android:textColor="@color/black"
                 android:textSize="@dimen/txt_vsm"
                 app:layout_constraintStart_toStartOf="@+id/noti_txt_heading"
                 app:layout_constraintTop_toBottomOf="@+id/noti_txt_heading" />
