--- a/app/src/main/res/layout/fragment_buy_ticket.xml
+++ b/app/src/main/res/layout/fragment_buy_ticket.xml
@@ -84,19 +84,22 @@
                 android:layout_width="@dimen/_25sdp"
                 android:layout_height="@dimen/_25sdp"
                 android:button="null"
-                android:background="@drawable/custom_radio"
+                android:background="@drawable/custom_radio0"
                 android:textStyle="bold" />
 
             <RadioButton
                 android:id="@+id/radio_1"
                 android:layout_width="@dimen/_25sdp"
                 android:layout_height="@dimen/_25sdp"
+                android:button="null"
+                android:background="@drawable/custom_radio1"
                 android:textStyle="bold" />
 
             <RadioButton
                 android:id="@+id/radio_2"
                 android:layout_width="@dimen/_25sdp"
                 android:layout_height="@dimen/_25sdp"
+                android:button="null"
                 android:textStyle="bold" />
 
             <RadioButton
