--- a/app/src/main/res/layout/home_item_view.xml
+++ b/app/src/main/res/layout/home_item_view.xml
@@ -197,6 +197,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
+                android:paddingStart="@dimen/_4sdp"
                 android:layout_marginStart="@dimen/_16sdp"
                 android:text="@string/purchased_ticket"
                 android:textSize="@dimen/txt_sm"
@@ -212,7 +213,7 @@
                 android:layout_height="0dp"
                 android:gravity="center"
                 android:text="00"
-                android:layout_marginStart="@dimen/_16sdp"
+                android:layout_marginStart="@dimen/_28sdp"
                 android:textSize="@dimen/txt_md"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/gL_vertical_start1"
